--- a/enbseries/enbeffectpostpass.fx.ini
+++ b/enbseries/enbeffectpostpass.fx.ini
@@ -980,3 +980,129 @@ Enable FXAA=false
 === Grain ====0
 === Lens ====0
 === AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
