--- a/enbseries/enbeffectprepass.fx.ini
+++ b/enbseries/enbeffectprepass.fx.ini
@@ -35,10 +35,79 @@ Show mask=false
 | Show mask=false
 |===== Sharpening ======0
 | Enable Sharpening=true
-| Sharpening Offset=0.7
-| Sharpening Strength=0.8
+| Sharpening Offset=1.0
+| Sharpening Strength=1.0
 | Sharpening Fadeout=3.0
 | Ignore Skin=true
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
 |===== Fake HDR ======0
 |===== Atmosphere ======0
 |===== Sharpening ======0
