--- a/enbseries.ini
+++ b/enbseries.ini
@@ -5,7 +5,7 @@ UseOriginalPostProcessing=false
 UseOriginalBloom=false
 EnablePrepass=true
 EnablePostPassShader=true
-EnableAdaptation=true
+EnableAdaptation=false
 EnableBloom=true
 EnableLens=true
 EnableDepthOfField=true
@@ -55,19 +55,19 @@ ForceMinMaxValues=false
 AdaptationMin=0.1
 AdaptationMax=10.0
 [DEPTHOFFIELD]
-FocusingTime=0.8
-ApertureTime=0.05
+FocusingTime=1.0
+ApertureTime=1.0
 [BLOOM]
 IgnoreWeatherSystem=false
-IgnoreWeatherSystemInterior=true
-AmountDawn=0.5
-AmountSunrise=0.5
-AmountDay=0.5
-AmountSunset=0.5
-AmountDusk=0.5
-AmountNight=0.5
-AmountInteriorDay=1.0
-AmountInteriorNight=1.0
+IgnoreWeatherSystemInterior=false
+AmountDawn=0.1
+AmountSunrise=0.1
+AmountDay=0.1
+AmountSunset=0.1
+AmountDusk=0.1
+AmountNight=0.1
+AmountInteriorDay=0.1
+AmountInteriorNight=0.1
 [LENS]
 IgnoreWeatherSystem=false
 IgnoreWeatherSystemInterior=false
@@ -309,7 +309,7 @@ MoonColorFilterInteriorDay=1, 1, 1
 MoonColorFilterInteriorNight=1, 1, 1
 [ENVIRONMENT]
 IgnoreWeatherSystem=false
-IgnoreWeatherSystemInterior=true
+IgnoreWeatherSystemInterior=false
 DirectLightingIntensityDawn=1.0
 DirectLightingIntensitySunrise=1.0
 DirectLightingIntensityDay=1.0
@@ -356,23 +356,23 @@ AmbientLightingIntensityDay=1.0
 AmbientLightingIntensitySunset=1.0
 AmbientLightingIntensityDusk=1.0
 AmbientLightingIntensityNight=1.0
-AmbientLightingIntensityInteriorDay=0.7
+AmbientLightingIntensityInteriorDay=1.0
 AmbientLightingIntensityInteriorNight=1.0
-AmbientLightingDesaturationDawn=1.0
-AmbientLightingDesaturationSunrise=1.0
-AmbientLightingDesaturationDay=1.0
-AmbientLightingDesaturationSunset=1.0
-AmbientLightingDesaturationDusk=1.0
-AmbientLightingDesaturationNight=1.0
-AmbientLightingDesaturationInteriorDay=1.0
-AmbientLightingDesaturationInteriorNight=1.0
+AmbientLightingDesaturationDawn=0.0
+AmbientLightingDesaturationSunrise=0.0
+AmbientLightingDesaturationDay=0.0
+AmbientLightingDesaturationSunset=0.0
+AmbientLightingDesaturationDusk=0.0
+AmbientLightingDesaturationNight=0.0
+AmbientLightingDesaturationInteriorDay=0.0
+AmbientLightingDesaturationInteriorNight=0.0
 PointLightingIntensityDawn=1.0
 PointLightingIntensitySunrise=1.0
 PointLightingIntensityDay=1.0
 PointLightingIntensitySunset=1.0
 PointLightingIntensityDusk=1.0
 PointLightingIntensityNight=1.0
-PointLightingIntensityInteriorDay=1.1
+PointLightingIntensityInteriorDay=1.0
 PointLightingIntensityInteriorNight=1.0
 PointLightingCurveDawn=1.0
 PointLightingCurveSunrise=1.0
@@ -380,16 +380,16 @@ PointLightingCurveDay=1.0
 PointLightingCurveSunset=1.0
 PointLightingCurveDusk=1.0
 PointLightingCurveNight=1.0
-PointLightingCurveInteriorDay=1.1
-PointLightingCurveInteriorNight=1.1
+PointLightingCurveInteriorDay=1.0
+PointLightingCurveInteriorNight=1.0
 PointLightingDesaturationDawn=0.0
 PointLightingDesaturationSunrise=0.0
 PointLightingDesaturationDay=0.0
 PointLightingDesaturationSunset=0.0
 PointLightingDesaturationDusk=0.0
 PointLightingDesaturationNight=0.0
-PointLightingDesaturationInteriorDay=0.3
-PointLightingDesaturationInteriorNight=0.3
+PointLightingDesaturationInteriorDay=0.0
+PointLightingDesaturationInteriorNight=0.0
 SpecularAmountMultiplierDawn=1.0
 SpecularAmountMultiplierSunrise=1.0
 SpecularAmountMultiplierDay=1.0
@@ -813,8 +813,8 @@ IgnoreWeatherSystemInterior=false
 EnableSeparateInteriorParameters=false
 OptimizeSmallRange=true
 EnableBigRange=true
-EnableShadow=true
-EnableNormalMappingShadows=true
+EnableShadow=false
+EnableNormalMappingShadows=false
 ShadowQuality=1
 NormalMappingShadowsQuality=1
 HitIntensityDawn=1.0
@@ -873,8 +873,8 @@ IgnoreWeatherSystemInterior=false
 EnableSeparateInteriorParameters=false
 OptimizeSmallRange=true
 EnableBigRange=true
-EnableShadow=true
-EnableNormalMappingShadows=true
+EnableShadow=false
+EnableNormalMappingShadows=false
 ShadowQuality=1
 NormalMappingShadowsQuality=1
 IntensityDawn=1.0
@@ -891,16 +891,16 @@ CurveDay=1.0
 CurveSunset=1.0
 CurveDusk=1.0
 CurveNight=1.0
-CurveInteriorDay=1.2
-CurveInteriorNight=1.2
+CurveInteriorDay=1.0
+CurveInteriorNight=1.0
 SpecularAmountDawn=1.0
 SpecularAmountSunrise=1.0
 SpecularAmountDay=1.0
 SpecularAmountSunset=1.0
 SpecularAmountDusk=1.0
 SpecularAmountNight=1.0
-SpecularAmountInteriorDay=0.2
-SpecularAmountInteriorNight=0.2
+SpecularAmountInteriorDay=1.0
+SpecularAmountInteriorNight=1.0
 SpecularPowerDawn=12.0
 SpecularPowerSunrise=12.0
 SpecularPowerDay=12.0
@@ -1033,7 +1033,7 @@ IgnoreWeatherSystem=true
 IgnoreWeatherSystemInterior=false
 EnableCubemap=true
 EnableGlossiness=true
-AntialiasingQuality=1
+AntialiasingQuality=0
 FresnelMin=0.1
 FresnelCurve=2.0
 GlossinessDawn=1.0
@@ -1071,11 +1071,11 @@ BodyReflectionAmountNight=0.0
 BodyReflectionAmountInteriorDay=0.0
 BodyReflectionAmountInteriorNight=0.0
 [SUBSURFACESCATTERING]
-IgnoreWeatherSystem=true
+IgnoreWeatherSystem=false
 IgnoreWeatherSystemInterior=false
 EnableSeparateInteriorParameters=false
 EnableOldSSS=false
-Quality=1
+Quality=0
 Radius=3.0
 RadiusInterior=3.0
 Amount=0.5
@@ -1304,10 +1304,10 @@ AmountNight=0.8
 AmountInteriorDay=0.8
 AmountInteriorNight=0.8
 [SHADOW]
-DistantShadowQuality=1
-DetailedShadowQuality=1
+DistantShadowQuality=-1
+DetailedShadowQuality=-1
 DetailedShadowInteriorQuality=1
 EnableDistantShadowAtNight=false
 ShadowQuality=1
 [NORMALMAPPINGSHADOWS]
-Quality=1
+Quality=0
