--- a/enbseries/Weather/SkyrimClear.ini
+++ b/enbseries/Weather/SkyrimClear.ini
@@ -86,7 +86,7 @@ GradientTopColorFilterSunrise=0.588, 0.588, 0.588
 GradientTopColorFilterDay=0.467, 0.698, 1
 GradientTopColorFilterSunset=0.608, 0.608, 0.608
 GradientTopColorFilterDusk=1, 1, 1
-GradientTopColorFilterNight=1, 1, 1
+GradientTopColorFilterNight=0.157, 0.157, 0.157
 GradientTopColorFilterInteriorDay=1, 1, 1
 GradientTopColorFilterInteriorNight=1, 1, 1
 GradientMiddleIntensityDawn=1.0
@@ -110,7 +110,7 @@ GradientMiddleColorFilterSunrise=0.588, 0.588, 0.588
 GradientMiddleColorFilterDay=0.467, 0.698, 1
 GradientMiddleColorFilterSunset=0.608, 0.608, 0.608
 GradientMiddleColorFilterDusk=1, 1, 1
-GradientMiddleColorFilterNight=1, 1, 1
+GradientMiddleColorFilterNight=0.157, 0.157, 0.157
 GradientMiddleColorFilterInteriorDay=1, 1, 1
 GradientMiddleColorFilterInteriorNight=1, 1, 1
 GradientHorizonIntensityDawn=1.0
@@ -134,7 +134,7 @@ GradientHorizonColorFilterSunrise=0.588, 0.588, 0.588
 GradientHorizonColorFilterDay=0.467, 0.698, 1
 GradientHorizonColorFilterSunset=0.608, 0.608, 0.608
 GradientHorizonColorFilterDusk=1, 1, 1
-GradientHorizonColorFilterNight=1, 1, 1
+GradientHorizonColorFilterNight=0.157, 0.157, 0.157
 GradientHorizonColorFilterInteriorDay=1, 1, 1
 GradientHorizonColorFilterInteriorNight=1, 1, 1
 CloudsIntensityDawn=1.0
@@ -163,7 +163,7 @@ CloudsDesaturationInteriorDay=0.0
 CloudsDesaturationInteriorNight=0.0
 CloudsOpacityDawn=1.0
 CloudsOpacitySunrise=1.0
-CloudsOpacityDay=0.9
+CloudsOpacityDay=1.0
 CloudsOpacitySunset=1.0
 CloudsOpacityDusk=1.0
 CloudsOpacityNight=1.0
@@ -186,9 +186,9 @@ CloudsEdgeMoonMultiplierNight=2.0
 CloudsEdgeMoonMultiplierInteriorDay=2.0
 CloudsEdgeMoonMultiplierInteriorNight=2.0
 SunIntensityDawn=1.0
-SunIntensitySunrise=1.0
-SunIntensityDay=1.0
-SunIntensitySunset=1.0
+SunIntensitySunrise=0.55
+SunIntensityDay=0.43
+SunIntensitySunset=0.55
 SunIntensityDusk=1.0
 SunIntensityNight=1.0
 SunIntensityInteriorDay=1.0
@@ -234,12 +234,12 @@ MoonColorFilterNight=1, 1, 1
 MoonColorFilterInteriorDay=1, 1, 1
 MoonColorFilterInteriorNight=1, 1, 1
 [ENVIRONMENT]
-DirectLightingIntensityDawn=1.0
-DirectLightingIntensitySunrise=1.4
-DirectLightingIntensityDay=1.6
-DirectLightingIntensitySunset=1.4
-DirectLightingIntensityDusk=1.0
-DirectLightingIntensityNight=1.0
+DirectLightingIntensityDawn=0.75
+DirectLightingIntensitySunrise=0.9
+DirectLightingIntensityDay=1.0
+DirectLightingIntensitySunset=0.9
+DirectLightingIntensityDusk=0.75
+DirectLightingIntensityNight=0.25
 DirectLightingIntensityInteriorDay=1.0
 DirectLightingIntensityInteriorNight=1.0
 DirectLightingCurveDawn=1.0
@@ -267,19 +267,19 @@ DirectLightingColorFilterAmountNight=0.0
 DirectLightingColorFilterAmountInteriorDay=0.0
 DirectLightingColorFilterAmountInteriorNight=0.0
 DirectLightingColorFilterDawn=1, 1, 1
-DirectLightingColorFilterSunrise=1, 1, 1
-DirectLightingColorFilterDay=1, 1, 1
-DirectLightingColorFilterSunset=1, 1, 1
+DirectLightingColorFilterSunrise=0.843, 0.843, 0.843
+DirectLightingColorFilterDay=0.804, 0.902, 1
+DirectLightingColorFilterSunset=0.843, 0.843, 0.843
 DirectLightingColorFilterDusk=1, 1, 1
 DirectLightingColorFilterNight=1, 1, 1
 DirectLightingColorFilterInteriorDay=1, 1, 1
 DirectLightingColorFilterInteriorNight=1, 1, 1
-AmbientLightingIntensityDawn=1.0
-AmbientLightingIntensitySunrise=0.5
-AmbientLightingIntensityDay=1.1
-AmbientLightingIntensitySunset=0.5
-AmbientLightingIntensityDusk=1.0
-AmbientLightingIntensityNight=1.0
+AmbientLightingIntensityDawn=0.45
+AmbientLightingIntensitySunrise=0.45
+AmbientLightingIntensityDay=1.0
+AmbientLightingIntensitySunset=0.45
+AmbientLightingIntensityDusk=0.45
+AmbientLightingIntensityNight=0.2
 AmbientLightingIntensityInteriorDay=1.0
 AmbientLightingIntensityInteriorNight=1.0
 AmbientLightingDesaturationDawn=0.0
@@ -375,7 +375,7 @@ FogColorFilterSunrise=0.588, 0.588, 0.588
 FogColorFilterDay=0.467, 0.698, 1
 FogColorFilterSunset=0.608, 0.608, 0.608
 FogColorFilterDusk=1, 1, 1
-FogColorFilterNight=1, 1, 1
+FogColorFilterNight=0.157, 0.157, 0.157
 FogColorFilterInteriorDay=1, 1, 1
 FogColorFilterInteriorNight=1, 1, 1
 ColorPowDawn=1.0
@@ -597,12 +597,12 @@ CurveNight=1.0
 CurveInteriorDay=1.0
 CurveInteriorNight=1.0
 [VOLUMETRICFOG]
-IntensityDawn=1.0
-IntensitySunrise=1.0
-IntensityDay=1.0
-IntensitySunset=1.0
-IntensityDusk=1.0
-IntensityNight=1.0
+IntensityDawn=0.7
+IntensitySunrise=0.7
+IntensityDay=0.7
+IntensitySunset=0.7
+IntensityDusk=0.7
+IntensityNight=0.5
 IntensityInteriorDay=1.0
 IntensityInteriorNight=1.0
 CurveDawn=1.0
@@ -762,12 +762,12 @@ DistanceFadeNight=1.0
 DistanceFadeInteriorDay=1.0
 DistanceFadeInteriorNight=1.0
 [IMAGEBASEDLIGHTING]
-AdditiveAmountDawn=0.0
-AdditiveAmountSunrise=0.0
-AdditiveAmountDay=0.05
-AdditiveAmountSunset=0.05
-AdditiveAmountDusk=0.05
-AdditiveAmountNight=0.0
+AdditiveAmountDawn=0.1
+AdditiveAmountSunrise=0.1
+AdditiveAmountDay=0.1
+AdditiveAmountSunset=0.1
+AdditiveAmountDusk=0.1
+AdditiveAmountNight=0.1
 AdditiveAmountInteriorDay=0.0
 AdditiveAmountInteriorNight=0.0
 MultiplicativeAmountDawn=0.15
@@ -778,12 +778,12 @@ MultiplicativeAmountDusk=0.15
 MultiplicativeAmountNight=0.15
 MultiplicativeAmountInteriorDay=0.0
 MultiplicativeAmountInteriorNight=0.0
-ReflectiveAmountDawn=0.0
-ReflectiveAmountSunrise=0.0
-ReflectiveAmountDay=0.0
-ReflectiveAmountSunset=0.0
-ReflectiveAmountDusk=0.0
-ReflectiveAmountNight=0.0
+ReflectiveAmountDawn=0.1
+ReflectiveAmountSunrise=0.1
+ReflectiveAmountDay=0.1
+ReflectiveAmountSunset=0.1
+ReflectiveAmountDusk=0.1
+ReflectiveAmountNight=0.1
 ReflectiveAmountInteriorDay=0.0
 ReflectiveAmountInteriorNight=0.0
 [RAIN]
