--- a/enbseries/enbbloom.fx.ini
+++ b/enbseries/enbbloom.fx.ini
@@ -6,13 +6,82 @@ Threshold=0.3
 Soft Threshold=0.5
 Mask out Sky=0.3
 === Color ====0
-Intensity=0.4
+Intensity=1.0
 Saturation=1.0
 Tint=1, 1, 1
-Tonemap output=false
+Tonemap output=true
 === Shape ====0
 Samples=8
 Sigma=1.0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
 === Masking ====0
 === Color ====0
 === Shape ====0
