--- a/enbseries/enbeffectpostpass.fx.ini
+++ b/enbseries/enbeffectpostpass.fx.ini
@@ -2,7 +2,7 @@
 TECHNIQUE=1
 =0
 Enable Letterbox=true
-Horizontal Size=0.1
+Horizontal Size=0.14
 Vertical Size=0.0
 Letterbox Rotation=0.0
 Letterbox Color=0, 0, 0
@@ -732,6 +732,144 @@ Enable FXAA=false
 === Vingette ====0
 === Grain ====0
 === Sharpening ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
 === Lens ====0
 === AA ====0
 === Letterbox ====0
