--- a/enbseries.ini
+++ b/enbseries.ini
@@ -5,7 +5,7 @@ UseOriginalPostProcessing=false
 UseOriginalBloom=false
 EnablePrepass=true
 EnablePostPassShader=true
-EnableAdaptation=false
+EnableAdaptation=true
 EnableBloom=true
 EnableLens=true
 EnableDepthOfField=true
@@ -309,7 +309,7 @@ MoonColorFilterInteriorDay=1, 1, 1
 MoonColorFilterInteriorNight=1, 1, 1
 [ENVIRONMENT]
 IgnoreWeatherSystem=false
-IgnoreWeatherSystemInterior=false
+IgnoreWeatherSystemInterior=true
 DirectLightingIntensityDawn=1.0
 DirectLightingIntensitySunrise=1.0
 DirectLightingIntensityDay=1.0
@@ -364,23 +364,23 @@ AmbientLightingDesaturationDay=0.0
 AmbientLightingDesaturationSunset=0.0
 AmbientLightingDesaturationDusk=0.0
 AmbientLightingDesaturationNight=0.0
-AmbientLightingDesaturationInteriorDay=0.0
-AmbientLightingDesaturationInteriorNight=0.0
+AmbientLightingDesaturationInteriorDay=1.0
+AmbientLightingDesaturationInteriorNight=1.0
 PointLightingIntensityDawn=1.0
 PointLightingIntensitySunrise=1.0
 PointLightingIntensityDay=1.0
 PointLightingIntensitySunset=1.0
 PointLightingIntensityDusk=1.0
 PointLightingIntensityNight=1.0
-PointLightingIntensityInteriorDay=1.0
-PointLightingIntensityInteriorNight=1.0
+PointLightingIntensityInteriorDay=1.5
+PointLightingIntensityInteriorNight=1.2
 PointLightingCurveDawn=1.0
 PointLightingCurveSunrise=1.0
 PointLightingCurveDay=1.0
 PointLightingCurveSunset=1.0
 PointLightingCurveDusk=1.0
-PointLightingCurveNight=1.0
-PointLightingCurveInteriorDay=1.0
+PointLightingCurveNight=1.1
+PointLightingCurveInteriorDay=1.1
 PointLightingCurveInteriorNight=1.0
 PointLightingDesaturationDawn=0.0
 PointLightingDesaturationSunrise=0.0
@@ -388,7 +388,7 @@ PointLightingDesaturationDay=0.0
 PointLightingDesaturationSunset=0.0
 PointLightingDesaturationDusk=0.0
 PointLightingDesaturationNight=0.0
-PointLightingDesaturationInteriorDay=0.0
+PointLightingDesaturationInteriorDay=0.1
 PointLightingDesaturationInteriorNight=0.0
 SpecularAmountMultiplierDawn=1.0
 SpecularAmountMultiplierSunrise=1.0
