--- a/enbseries/enbeffectpostpass.fx.ini
+++ b/enbseries/enbeffectpostpass.fx.ini
@@ -1244,3 +1244,75 @@ Enable FXAA=false
 === Grain ====0
 === Lens ====0
 === AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
+=== Letterbox ====0
+=== Color ====0
+=== Vingette ====0
+=== Grain ====0
+=== Lens ====0
+=== AA ====0
