direct lighting color and better sky

--- a/enbseries/enbbloom.fx.ini
+++ b/enbseries/enbbloom.fx.ini
@@ -9,10 +9,19 @@ Mask out Sky=0.3
 Intensity=1.0
 Saturation=1.0
 Tint=1, 1, 1
-Tonemap output=true
+Tonemap output=false
 === Shape ====0
 Samples=8
 Sigma=1.0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
 === Masking ====0
 === Color ====0
 === Shape ====0
