--- a/enbseries/enbeffectprepass.fx.ini
+++ b/enbseries/enbeffectprepass.fx.ini
@@ -327,3 +327,12 @@ Show mask=false
 |===== Fake HDR ======0
 |===== Atmosphere ======0
 |===== Sharpening ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
