Add Skin Editing. Reworked postpass UI. Tweaked some shit

--- a/enbseries.ini
+++ b/enbseries.ini
@@ -372,7 +372,7 @@ PointLightingIntensityDay=1.0
 PointLightingIntensitySunset=1.0
 PointLightingIntensityDusk=1.0
 PointLightingIntensityNight=1.0
-PointLightingIntensityInteriorDay=1.5
+PointLightingIntensityInteriorDay=1.2
 PointLightingIntensityInteriorNight=1.2
 PointLightingCurveDawn=1.0
 PointLightingCurveSunrise=1.0
@@ -380,7 +380,7 @@ PointLightingCurveDay=1.0
 PointLightingCurveSunset=1.0
 PointLightingCurveDusk=1.0
 PointLightingCurveNight=1.1
-PointLightingCurveInteriorDay=1.1
+PointLightingCurveInteriorDay=1.0
 PointLightingCurveInteriorNight=1.0
 PointLightingDesaturationDawn=0.0
 PointLightingDesaturationSunrise=0.0
@@ -465,7 +465,7 @@ ColorPowInteriorNight=1.0
 [SKYLIGHTING]
 IgnoreWeatherSystem=false
 IgnoreWeatherSystemInterior=false
-HighPrecision=false
+HighPrecision=true
 Quality=1
 AmbientMinLevelDawn=0.1
 AmbientMinLevelSunrise=0.1
@@ -680,14 +680,14 @@ FakeLightInteriorNight=0.0
 [SKINSPECULAR]
 IgnoreWeatherSystem=true
 IgnoreWeatherSystemInterior=false
-SpecularAmountDawn=1.0
-SpecularAmountSunrise=1.0
-SpecularAmountDay=1.0
-SpecularAmountSunset=1.0
-SpecularAmountDusk=1.0
-SpecularAmountNight=1.0
-SpecularAmountInteriorDay=1.0
-SpecularAmountInteriorNight=1.0
+SpecularAmountDawn=0.05
+SpecularAmountSunrise=0.05
+SpecularAmountDay=0.05
+SpecularAmountSunset=0.05
+SpecularAmountDusk=0.05
+SpecularAmountNight=0.05
+SpecularAmountInteriorDay=0.05
+SpecularAmountInteriorNight=0.05
 [WINDOWLIGHT]
 IgnoreWeatherSystem=true
 IgnoreWeatherSystemInterior=true
@@ -869,12 +869,12 @@ BigRangeScale=1.0
 BigRangeScaleInterior=1.0
 [COMPLEXPARTICLELIGHTS]
 IgnoreWeatherSystem=true
-IgnoreWeatherSystemInterior=false
+IgnoreWeatherSystemInterior=true
 EnableSeparateInteriorParameters=false
 OptimizeSmallRange=true
 EnableBigRange=true
-EnableShadow=false
-EnableNormalMappingShadows=false
+EnableShadow=true
+EnableNormalMappingShadows=true
 ShadowQuality=1
 NormalMappingShadowsQuality=1
 IntensityDawn=1.0
@@ -883,24 +883,24 @@ IntensityDay=1.0
 IntensitySunset=1.0
 IntensityDusk=1.0
 IntensityNight=1.0
-IntensityInteriorDay=1.0
-IntensityInteriorNight=1.0
+IntensityInteriorDay=0.5
+IntensityInteriorNight=0.5
 CurveDawn=1.0
 CurveSunrise=1.0
 CurveDay=1.0
 CurveSunset=1.0
 CurveDusk=1.0
 CurveNight=1.0
-CurveInteriorDay=1.0
-CurveInteriorNight=1.0
+CurveInteriorDay=2.0
+CurveInteriorNight=2.0
 SpecularAmountDawn=1.0
 SpecularAmountSunrise=1.0
 SpecularAmountDay=1.0
 SpecularAmountSunset=1.0
 SpecularAmountDusk=1.0
 SpecularAmountNight=1.0
-SpecularAmountInteriorDay=1.0
-SpecularAmountInteriorNight=1.0
+SpecularAmountInteriorDay=0.6
+SpecularAmountInteriorNight=0.6
 SpecularPowerDawn=12.0
 SpecularPowerSunrise=12.0
 SpecularPowerDay=12.0
