changed vibrance and shit

--- a/enbseries.ini
+++ b/enbseries.ini
@@ -481,12 +481,12 @@ AOAmount=0.0
 AOAmountInterior=0.0
 [SSAO_SSIL]
 IgnoreWeatherSystem=true
-IgnoreWeatherSystemInterior=false
+IgnoreWeatherSystemInterior=true
 OptimizeCaching=true
-UseSelfIntersecting=false
-ApplyToSSS=false
+UseSelfIntersecting=true
+ApplyToSSS=true
 UseIndirectLighting=true
-UseComplexAmbientOcclusion=false
+UseComplexAmbientOcclusion=true
 EnableComplexFilter=true
 EnableDenoiser=true
 ResolutionScale=0.5
@@ -508,7 +508,7 @@ AOMixingType=2
 AOMixingTypeInterior=2
 ILBrightnessCompressionDawn=1.0
 ILBrightnessCompressionSunrise=1.0
-ILBrightnessCompressionDay=1.5
+ILBrightnessCompressionDay=1.52
 ILBrightnessCompressionSunset=1.0
 ILBrightnessCompressionDusk=1.0
 ILBrightnessCompressionNight=1.0
@@ -1107,23 +1107,23 @@ AmountInterior=1.0
 Power=1.0
 PowerInterior=1.0
 [WATER]
-IgnoreWeatherSystem=false
+IgnoreWeatherSystem=true
 IgnoreWeatherSystemInterior=false
 DisableDistantReflection=true
 EnableTemporalAA=true
 EnableDispersion=true
 EnableCaustics=true
 EnableParallax=true
-EnableShadow=false
-EnableVolumetricShadow=false
+EnableShadow=true
+EnableVolumetricShadow=true
 EnableCloudsShadow=true
 EnableLighting=true
 EnableSelfReflection=true
-EnableDisplacement=false
-EnableTessellation=false
-DisplacementQuality=2
-TessellationQuality=2
-VolumetricShadowQuality=2
+EnableDisplacement=true
+EnableTessellation=true
+DisplacementQuality=-1
+TessellationQuality=-1
+VolumetricShadowQuality=0
 ReflectionAmount=1.0
 FresnelMultiplier=1.0
 FresnelMin=0.0
