CHnaged from vibrance to resaturation.  Began looking at skin

--- a/enbseries/enbeffectpostpass.fx.ini
+++ b/enbseries/enbeffectpostpass.fx.ini
@@ -1355,8 +1355,8 @@ Enable FXAA=false
 | Enable FXAA=false
 |===== Color ======0
 | Image Saturation:=0
-|  Vibrance=0.35
-|  RGB Vibrance=0.882, 0.882, 1
+|  Vibrance=0.0
+|  RGB Vibrance=1, 1, 1
 |  Global Saturation=1.0
 |  Red Saturation=0.0
 |  Yellow Saturation=0.0
@@ -1435,3 +1435,56 @@ Enable FXAA=false
 |===== Letterbox ======0
 |===== Camera Effects ======0
 |===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|  Level Output Whitepoint=1.0
+|=== Show Curve Graph ====false
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|=== Show Curve Graph ====false
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|=== Show Curve Graph ====false
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|=== Show Curve Graph ====false
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|=== Show Curve Graph ====false
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|=== Show Curve Graph ====false
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|=== Show Curve Graph ====false
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|=== Show Curve Graph ====false
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|=== Show Curve Graph ====false
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|=== Show Curve Graph ====false
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|=== Show Curve Graph ====false
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|=== Show Curve Graph ====false
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|=== Show Curve Graph ====false
