Improved nighttime and started fucking with skin

--- a/enbseries/enbeffectpostpass.fx.ini
+++ b/enbseries/enbeffectpostpass.fx.ini
@@ -1488,3 +1488,51 @@ Enable FXAA=false
 |===== Camera Effects ======0
 |===== Color ======0
 |=== Show Curve Graph ====false
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|=== Show Curve Graph ====false
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|=== Show Curve Graph ====false
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|=== Show Curve Graph ====false
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|=== Show Curve Graph ====false
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|=== Show Curve Graph ====false
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|=== Show Curve Graph ====false
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|=== Show Curve Graph ====false
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|=== Show Curve Graph ====false
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|=== Show Curve Graph ====false
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|=== Show Curve Graph ====false
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|=== Show Curve Graph ====false
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|=== Show Curve Graph ====false
