--- a/enbseries/enbeffectprepass.fx.ini
+++ b/enbseries/enbeffectprepass.fx.ini
@@ -340,11 +340,59 @@ Show mask=false
 |===== Atmosphere ======0
 |===== Sharpening ======0
 |===== Skin ======0
-| Enable Skin Edit=true
+| Enable Skin Edit=false
 | Skin Gamma=1.0
 | Skin Tone=50
 | Skin Tint=0.557, 0.498, 0.498
 | Effect fade distance=1.0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
 |===== Fake HDR ======0
 |===== Atmosphere ======0
 |===== Sharpening ======0
