--- a/enbseries/enbeffectpostpass.fx.ini
+++ b/enbseries/enbeffectpostpass.fx.ini
@@ -1343,14 +1343,14 @@ Enable FXAA=false
 | Letterbox Distance=0.0
 |===== Camera Effects ======0
 | Enable Lens Distortion=false
-|  Distortion Amount=0
+|  Distortion Amount=-10
 | Enable Vingette=false
 |  Vingette Intesity=0.1
 | Enable Grain=false
 |  Grain Amount=50
 |  Grain Roughness=1
 | Enable Chromatic Aberration=false
-|  Aberration Strength=1.0
+|  Aberration Strength=0.3
 |  Aberration Curve=1.0
 | Enable FXAA=false
 |===== Color ======0
@@ -1438,7 +1438,7 @@ Enable FXAA=false
 |===== Letterbox ======0
 |===== Camera Effects ======0
 |===== Color ======0
-|  Level Output Whitepoint=1.0
+|  Level Output Whitepoint=1.1
 |=== Show Curve Graph ====false
 |===== Letterbox ======0
 |===== Camera Effects ======0
@@ -1536,3 +1536,71 @@ Enable FXAA=false
 |===== Camera Effects ======0
 |===== Color ======0
 |=== Show Curve Graph ====false
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+| Curve Settings:=0
+|  Show Curve Graph=false
+|  Graph Box Size=512
+|  Screen Blend Curves=false
+|  Shift Chroma range=0.1
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
