--- a/enbseries/enbeffect.fx.ini
+++ b/enbseries/enbeffect.fx.ini
@@ -4,12 +4,12 @@ Surreal 2=0
 created by Adyss=0
 =0
 ««« Color »»»=0
-Color:  Exposure (Day)=0.4
-Color:  Exposure (Night)=-0.5
-Color:  Exposure (Interior)=0.0
-Color:  Gamma (Day)=1.5
+Color:  Exposure (Day)=1.0
+Color:  Exposure (Night)=0.0
+Color:  Exposure (Interior)=0.2
+Color:  Gamma (Day)=2.0
 Color:  Gamma (Night)=1.0
-Color:  Gamma (Interior)=1.2
+Color:  Gamma (Interior)=1.0
 Color:  RGB Gamma (Day)=0.498, 0.498, 0.498
 Color:  RGB Gamma (Night)=0.498, 0.498, 0.498
 Color:  RGB Gamma (Interior)=0.498, 0.498, 0.498
@@ -19,9 +19,9 @@ Color:  Color Temperature (Interior)=6000.0
 Color:  Desaturation (Day)=0.8
 Color:  Desaturation (Night)=0.8
 Color:  Desaturation (Interior)=1.0
-Color:  Resaturation (Day)=1.2
-Color:  Resaturation (Night)=1.2
-Color:  Resaturation (Interior)=0.3
+Color:  Resaturation (Day)=0.4
+Color:  Resaturation (Night)=0.5
+Color:  Resaturation (Interior)=0.25
 Color:  Hue Shift (Day)=1.0
 Color:  Hue Shift (Night)=1.0
 Color:  Hue Shift (Interior)=1.0
@@ -34,3 +34,4 @@ Debug:  Enable AGCC Tinting=true
 Debug:  Enable AGCC Fade=true
 ° • Nordwind • °=0
 An ENB Preset by Guts and Adyss=0
+Debug:  Use Fujifilm F LOG=true
