Clear weather Finalized

--- a/enbseries/enbbloom.fx.ini
+++ b/enbseries/enbbloom.fx.ini
@@ -835,3 +835,51 @@ Sigma=1.0
 === Masking ====0
 === Color ====0
 === Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
