--- a/enbseries/enbeffectpostpass.fx.ini
+++ b/enbseries/enbeffectpostpass.fx.ini
@@ -1438,7 +1438,7 @@ Enable FXAA=false
 |===== Letterbox ======0
 |===== Camera Effects ======0
 |===== Color ======0
-|  Level Output Whitepoint=1.1
+|  Level Output Whitepoint=1.2
 |=== Show Curve Graph ====false
 |===== Letterbox ======0
 |===== Camera Effects ======0
@@ -1544,6 +1544,54 @@ Enable FXAA=false
 |  Graph Box Size=512
 |  Screen Blend Curves=false
 |  Shift Chroma range=0.1
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
 |===== Letterbox ======0
 |===== Camera Effects ======0
 |===== Color ======0
