Almost done with cloudy weathers

--- a/enbseries/enbeffectprepass.fx.ini
+++ b/enbseries/enbeffectprepass.fx.ini
@@ -725,3 +725,87 @@ Show mask=false
 |===== Atmosphere ======0
 |===== Sharpening ======0
 |===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
