--- a/enbseries/enbeffectpostpass.fx.ini
+++ b/enbseries/enbeffectpostpass.fx.ini
@@ -1718,3 +1718,66 @@ Enable FXAA=false
 |===== Letterbox ======0
 |===== Camera Effects ======0
 |===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
