finished cloudy weathers

--- a/enbseries.ini
+++ b/enbseries.ini
@@ -24,7 +24,7 @@ EnableComplexFireLights=true
 EnableComplexParticleLights=true
 EnableSunRays=true
 EnableVolumetricRays=true
-EnableSunGlare=false
+EnableSunGlare=true
 EnableWater=true
 EnableUnderwaterShader=true
 EnableWetSurfaces=true
@@ -1274,7 +1274,7 @@ GlowIntensityInteriorNight=1.0
 [PROCEDURALSUN]
 IgnoreWeatherSystem=false
 IgnoreWeatherSystemInterior=false
-Size=1.0
+Size=0.25
 EdgeSoftness=0.4
 GlowIntensityDawn=0.4
 GlowIntensitySunrise=0.4
