--- a/enbseries/enbeffectprepass.fx.ini
+++ b/enbseries/enbeffectprepass.fx.ini
@@ -36,7 +36,7 @@ Show mask=false
 |===== Sharpening ======0
 | Enable Sharpening=true
 | Sharpening Offset=1.0
-| Sharpening Strength=1.0
+| Sharpening Strength=0.3
 | Sharpening Fadeout=3.0
 | Ignore Skin=true
 |===== Fake HDR ======0
@@ -345,6 +345,90 @@ Show mask=false
 | Skin Tone=50
 | Skin Tint=0.557, 0.498, 0.498
 | Effect fade distance=1.0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
+|===== Fake HDR ======0
+|===== Atmosphere ======0
+|===== Sharpening ======0
+|===== Skin ======0
 |===== Fake HDR ======0
 |===== Atmosphere ======0
 |===== Sharpening ======0
