more bloom on sky because I like it and better nights

--- a/enbseries/enbeffect.fx.ini
+++ b/enbseries/enbeffect.fx.ini
@@ -5,10 +5,10 @@ created by Adyss=0
 =0
 ««« Color »»»=0
 Color:  Exposure (Day)=1.0
-Color:  Exposure (Night)=0.0
+Color:  Exposure (Night)=0.2
 Color:  Exposure (Interior)=0.2
 Color:  Gamma (Day)=2.0
-Color:  Gamma (Night)=1.0
+Color:  Gamma (Night)=0.6
 Color:  Gamma (Interior)=1.0
 Color:  RGB Gamma (Day)=0.498, 0.498, 0.498
 Color:  RGB Gamma (Night)=0.498, 0.498, 0.498
@@ -35,3 +35,4 @@ Debug:  Enable AGCC Fade=true
 ° • Nordwind • °=0
 An ENB Preset by Guts and Adyss=0
 Debug:  Use Fujifilm F LOG=true
+• Nordwind •=0
