--- a/enbseries/enbeffectpostpass.fx.ini
+++ b/enbseries/enbeffectpostpass.fx.ini
@@ -1844,3 +1844,78 @@ Enable FXAA=false
 |===== Letterbox ======0
 |===== Camera Effects ======0
 |===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
+|===== Letterbox ======0
+|===== Camera Effects ======0
+|===== Color ======0
