--- a/enbseries/enbeffectprepass.fx.ini
+++ b/enbseries/enbeffectprepass.fx.ini
@@ -1,5 +1,5 @@
 [ENBEFFECTPREPASS.FX]
-TECHNIQUE=1
+TECHNIQUE=3
 =0
 Fake HDR=0
 Calibrate Shadow Range=0.18
@@ -35,7 +35,7 @@ Show mask=false
 | Show mask=false
 |===== Sharpening ======0
 | Enable Sharpening=true
-| Sharpening Offset=1.0
+| Sharpening Offset=0.5
 | Sharpening Strength=0.3
 | Sharpening Fadeout=3.0
 | Ignore Skin=true
@@ -893,3 +893,13 @@ Show mask=false
 |===== Atmosphere ======0
 |===== Sharpening ======0
 |===== Skin ======0
+|----- Fake HDR -----=0
+|----- Atmosphere -----=0
+|----- Sharpening -----=0
+|----- Skin -----=0
+|----- AA -----=0
+| Enable FXAA=true
+| FXAA Edge Threshhold=0.0
+| FXAA Edge Threshhold Min=0.0
+| FXAA Subpix Cap=0.75
+| FXAA Subpix Trim=0.12
