reverted bloom back to previous setting

--- a/enbseries/enbbloom.fx.ini
+++ b/enbseries/enbbloom.fx.ini
@@ -4,7 +4,7 @@ TECHNIQUE=3
 Sensitivity=0.9
 Threshold=0.3
 Soft Threshold=0.5
-Mask out Sky=0.3
+Mask out Sky=0.5
 === Color ====0
 Intensity=1.0
 Saturation=1.0
@@ -13,6 +13,15 @@ Tonemap output=false
 === Shape ====0
 Samples=8
 Sigma=1.0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
 === Masking ====0
 === Color ====0
 === Shape ====0
