--- a/enblocal.ini
+++ b/enblocal.ini
@@ -39,5 +39,5 @@ ScreenshotFormat=1
 [GUI]
 HighResolutionScaling=true
 ShowShadersWindow=true
-ShowWeatherWindow=true
+ShowWeatherWindow=false
 ShowObjectsWindow=false
