--- a/enbseries.ini
+++ b/enbseries.ini
@@ -14,7 +14,7 @@ EnableProceduralSun=true
 EnableDistantShadow=true
 EnableDetailedShadow=true
 EnableNormalMappingShadows=true
-EnableCloudShadows=true
+EnableCloudShadows=false
 EnableImageBasedLighting=true
 EnableSkinSpecular=true
 EnableSubSurfaceScattering=true
@@ -465,16 +465,16 @@ ColorPowInteriorNight=1.0
 [SKYLIGHTING]
 IgnoreWeatherSystem=false
 IgnoreWeatherSystemInterior=false
-HighPrecision=true
+HighPrecision=false
 Quality=1
-AmbientMinLevelDawn=0.1
-AmbientMinLevelSunrise=0.1
-AmbientMinLevelDay=0.1
-AmbientMinLevelSunset=0.1
-AmbientMinLevelDusk=0.1
-AmbientMinLevelNight=0.1
-AmbientMinLevelInteriorDay=0.1
-AmbientMinLevelInteriorNight=0.1
+AmbientMinLevelDawn=0.2
+AmbientMinLevelSunrise=0.2
+AmbientMinLevelDay=0.2
+AmbientMinLevelSunset=0.2
+AmbientMinLevelDusk=0.2
+AmbientMinLevelNight=0.2
+AmbientMinLevelInteriorDay=0.2
+AmbientMinLevelInteriorNight=0.2
 [SSAO_GAME]
 ColorfulMix=true
 AOAmount=0.0
@@ -764,14 +764,14 @@ ColorFilterInteriorNight=1, 1, 1
 [FIRE]
 IgnoreWeatherSystem=true
 IgnoreWeatherSystemInterior=true
-IntensityDawn=2.0
-IntensitySunrise=2.0
-IntensityDay=2.0
-IntensitySunset=2.0
-IntensityDusk=2.0
-IntensityNight=2.0
-IntensityInteriorDay=2.0
-IntensityInteriorNight=2.0
+IntensityDawn=3.0
+IntensitySunrise=3.0
+IntensityDay=3.0
+IntensitySunset=3.0
+IntensityDusk=3.0
+IntensityNight=3.0
+IntensityInteriorDay=3.0
+IntensityInteriorNight=3.0
 CurveDawn=1.0
 CurveSunrise=1.0
 CurveDay=1.0
@@ -1274,7 +1274,7 @@ GlowIntensityInteriorNight=1.0
 [PROCEDURALSUN]
 IgnoreWeatherSystem=false
 IgnoreWeatherSystemInterior=false
-Size=0.25
+Size=0.3
 EdgeSoftness=0.4
 GlowIntensityDawn=0.4
 GlowIntensitySunrise=0.4
@@ -1311,3 +1311,8 @@ EnableDistantShadowAtNight=false
 ShadowQuality=1
 [NORMALMAPPINGSHADOWS]
 Quality=0
+[GRASSCOLLISIONS]
+Decay=2.0
+FadeRandomization=0.6
+Elasticity=2.0
+Flexibility=0.5
