--- a/enbseries/enbeffectprepass.fx.ini
+++ b/enbseries/enbeffectprepass.fx.ini
@@ -1,5 +1,5 @@
 [ENBEFFECTPREPASS.FX]
-TECHNIQUE=3
+TECHNIQUE=2
 =0
 Fake HDR=0
 Calibrate Shadow Range=0.18
@@ -20,14 +20,14 @@ Show mask=false
 |===== Fake HDR ======0
 | Calibrate Shadow Range=0.18
 | Lighten Shadows=0.05
-| Blur Shadows=0.1
+| Blur Shadows=0.2
 | HDR Tone=0.2
 |===== Atmosphere ======0
-| Enable Atmosphere=false
+| Enable Atmosphere=true
 | Air Density (Exterior)=0.0
-| Air Density (Interior)=0.0
+| Air Density (Interior)=0.2
 | Air Tint (Exterior)=1, 1, 1
-| Air Tint (Interior)=1, 1, 1
+| Air Tint (Interior)=0.392, 0.392, 0.431
 | Air Distance (Exterior)=1.0
 | Air Distance (Interior)=1.0
 | Air Start (Exterior)=0.0
@@ -35,8 +35,8 @@ Show mask=false
 | Show mask=false
 |===== Sharpening ======0
 | Enable Sharpening=true
-| Sharpening Offset=0.5
-| Sharpening Strength=0.3
+| Sharpening Offset=0.8
+| Sharpening Strength=1.0
 | Sharpening Fadeout=3.0
 | Ignore Skin=true
 |===== Fake HDR ======0
@@ -809,90 +809,6 @@ Show mask=false
 |===== Atmosphere ======0
 |===== Sharpening ======0
 |===== Skin ======0
-|===== Fake HDR ======0
-|===== Atmosphere ======0
-|===== Sharpening ======0
-|===== Skin ======0
-|===== Fake HDR ======0
-|===== Atmosphere ======0
-|===== Sharpening ======0
-|===== Skin ======0
-|===== Fake HDR ======0
-|===== Atmosphere ======0
-|===== Sharpening ======0
-|===== Skin ======0
-|===== Fake HDR ======0
-|===== Atmosphere ======0
-|===== Sharpening ======0
-|===== Skin ======0
-|===== Fake HDR ======0
-|===== Atmosphere ======0
-|===== Sharpening ======0
-|===== Skin ======0
-|===== Fake HDR ======0
-|===== Atmosphere ======0
-|===== Sharpening ======0
-|===== Skin ======0
-|===== Fake HDR ======0
-|===== Atmosphere ======0
-|===== Sharpening ======0
-|===== Skin ======0
-|===== Fake HDR ======0
-|===== Atmosphere ======0
-|===== Sharpening ======0
-|===== Skin ======0
-|===== Fake HDR ======0
-|===== Atmosphere ======0
-|===== Sharpening ======0
-|===== Skin ======0
-|===== Fake HDR ======0
-|===== Atmosphere ======0
-|===== Sharpening ======0
-|===== Skin ======0
-|===== Fake HDR ======0
-|===== Atmosphere ======0
-|===== Sharpening ======0
-|===== Skin ======0
-|===== Fake HDR ======0
-|===== Atmosphere ======0
-|===== Sharpening ======0
-|===== Skin ======0
-|===== Fake HDR ======0
-|===== Atmosphere ======0
-|===== Sharpening ======0
-|===== Skin ======0
-|===== Fake HDR ======0
-|===== Atmosphere ======0
-|===== Sharpening ======0
-|===== Skin ======0
-|===== Fake HDR ======0
-|===== Atmosphere ======0
-|===== Sharpening ======0
-|===== Skin ======0
-|===== Fake HDR ======0
-|===== Atmosphere ======0
-|===== Sharpening ======0
-|===== Skin ======0
-|===== Fake HDR ======0
-|===== Atmosphere ======0
-|===== Sharpening ======0
-|===== Skin ======0
-|===== Fake HDR ======0
-|===== Atmosphere ======0
-|===== Sharpening ======0
-|===== Skin ======0
-|===== Fake HDR ======0
-|===== Atmosphere ======0
-|===== Sharpening ======0
-|===== Skin ======0
-|===== Fake HDR ======0
-|===== Atmosphere ======0
-|===== Sharpening ======0
-|===== Skin ======0
-|===== Fake HDR ======0
-|===== Atmosphere ======0
-|===== Sharpening ======0
-|===== Skin ======0
 |----- Fake HDR -----=0
 |----- Atmosphere -----=0
 |----- Sharpening -----=0
@@ -903,3 +819,8 @@ Show mask=false
 | FXAA Edge Threshhold Min=0.0
 | FXAA Subpix Cap=0.75
 | FXAA Subpix Trim=0.12
+|----- Sun -----=0
+| Enable Glow=true
+|  Glow Strength=1.0
+|  Glow Curve=2.0
+|  Glow Tint=0.5, 0.498, 0.498
