--- a/enbseries/enbbloom.fx.ini
+++ b/enbseries/enbbloom.fx.ini
@@ -1093,3 +1093,102 @@ Sigma=1.0
 === Masking ====0
 === Color ====0
 === Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
