--- a/enbseries/enbeffectpostpass.fx.ini
+++ b/enbseries/enbeffectpostpass.fx.ini
@@ -1919,3 +1919,10 @@ Enable FXAA=false
 |===== Letterbox ======0
 |===== Camera Effects ======0
 |===== Color ======0
+|----- Camera Effects -----=0
+| 	Horizontal Size=0.1
+| 	Vertical Size=0.0
+| 	Letterbox Rotation=0.0
+| 	Letterbox Color=0, 0, 0
+| 	Letterbox Distance=0.0
+|----- Color -----=0
