--- a/enbseries/enbbloom.fx.ini
+++ b/enbseries/enbbloom.fx.ini
@@ -1192,3 +1192,30 @@ Sigma=1.0
 === Masking ====0
 === Color ====0
 === Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
