--- a/enbseries/enbbloom.fx.ini
+++ b/enbseries/enbbloom.fx.ini
@@ -1219,3 +1219,45 @@ Sigma=1.0
 === Masking ====0
 === Color ====0
 === Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
+=== Masking ====0
+=== Color ====0
+=== Shape ====0
