--- a/enbseries/enbbloom.fx.ini
+++ b/enbseries/enbbloom.fx.ini
@@ -1,5 +1,5 @@
 [ENBBLOOM.FX]
-TECHNIQUE=3
+TECHNIQUE=2
 =0
 Sensitivity=0.9
 Threshold=0.3
@@ -7,7 +7,7 @@ Soft Threshold=0.5
 Mask out Sky=0.5
 === Color ====0
 Intensity=1.0
-Saturation=1.0
+Saturation=1.2
 Tint=1, 1, 1
 Tonemap output=false
 === Shape ====0
@@ -1261,3 +1261,18 @@ Sigma=1.0
 === Masking ====0
 === Color ====0
 === Shape ====0
+----- Masking -----=0
+----- Color -----=0
+----- Shape -----=0
+----- Adaptation -----=0
+Enable Adaptation=false
+Adaptation Samples=8
+Adaptation Impact=1.0
+Min Adaptation=0.0
+Max Adaptation=1.0
+----- Lens Dirt -----=0
+Enable Lens Dirt=true
+Select Dirt Texture=0
+Dirt Intensity=0.5
+Dirt Spread=1.0
+Dirt Tint=0.498, 0.498, 0.498
